# skillkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: explanation-design.md  howto.md  reference.md  tutorial-getting-started.md
docs/superpowers/plans/: 2026-06-02-skillkit.md
docs/superpowers/specs/: 2026-06-02-skillkit-design.md
src/skillkit/: adopt.py  catalog.py  cli.py  config.py  manifest.py  sync.py  tui.py
tests/: test_adopt.py  test_catalog.py  test_cli.py  test_manifest.py  test_smoke.py  test_sync.py  test_tui.py
