[project]
name = "skillkit"
version = "0.1.0"
description = "Curate and install Claude Code skills per-project"
requires-python = ">=3.11"
dependencies = ["tomli-w>=1.0", "PyYAML>=6.0", "textual>=0.60", "rich>=13.0"]

[project.scripts]
skillkit = "skillkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillkit"]

[dependency-groups]
dev = ["pytest>=8.0"]
